<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_api_key">Popular Movies API Key</string>
    <string name="api_key">API Key:</string>
    <string name="save_button">Save</string>
    <string name="api_help_text">To use the app, you\'ll need your own API Key. For information on obtaining a key, please visit: <a href="https://www.themoviedb.org/faq/api">The_MovieDB_FAQ</a></string>
    <string name="title_activity_details">Popular Movie Details</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by_ratings">"Sort By Ratings"</string>
    <string name="sort_by_popularity">"Sort By Popularity"</string>
    <string name="sort_by_favorites">"Sort By Favorites"</string>
</resources>
