<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/refresh" android:title="@string/refresh"
        android:orderInCategory="200" app:showAsAction="never"/>
    <item android:id="@+id/sort_ratings" android:title="@string/sort_by_ratings"
        android:orderInCategory="300" app:showAsAction="never"/>
    <item android:id="@+id/sort_popularity" android:title="@string/sort_by_popularity"
        android:orderInCategory="400" app:showAsAction="never"/>
    <item android:id="@+id/sort_favorites" android:title="@string/sort_by_favorites"
        android:orderInCategory="500" app:showAsAction="never"/>
</menu>
